ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /$2 # rewrite /api/users/signup to simply /signup
spec:
  ingressClassName: nginx
  rules:
    - # host: quiz-app.com
      http:
        paths:
          # auth service
          - path: /api/auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          # quiz service
          - path: /api/quiz(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: quiz-srv
                port:
                  number: 3000
          # default to react client
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: react-client-srv
                port:
                  number: 3000
